update project name

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "mahbang-sample-project": {
+    "mahbang-sample": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/mahbang-sample-project",
+            "baseHref": "/mahbang-sample/",
+            "outputPath": "dist/mahbang-sample",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -72,10 +73,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "mahbang-sample-project:build:production"
+              "browserTarget": "mahbang-sample:build:production"
             },
             "development": {
-              "browserTarget": "mahbang-sample-project:build:development"
+              "browserTarget": "mahbang-sample:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -83,7 +84,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "mahbang-sample-project:build"
+            "browserTarget": "mahbang-sample:build"
           }
         },
         "test": {
